--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           node-version: '20'
       - uses: actions/setup-swift@v1
+      - name: SwiftLint
+        uses: norio-nomura/action-swiftlint@3.2.1
       - name: Build and test
         run: swift test
       - name: Generate CLI reference
